# PlanetSimulationV1

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  cube.hpp  engine.hpp  gameobject.hpp  mesh.hpp  mesh_manager.hpp  planet.hpp  renderer.hpp  scene.hpp  scene_manager.hpp  simulation_scene.hpp  texture_manager.hpp  window.hpp
include/core/: engine.hpp  gamestates.hpp  window.hpp
include/glad/: glad.h
include/managers/: mesh_manager.hpp  scene_manager.hpp  texture_manager.hpp
include/objects/: gameobject.hpp  planet.hpp
include/physics/: phyisics_constants.hpp  physics.hpp  physics_config.hpp
include/renderer/: mesh.hpp  renderer.hpp  texture.hpp
include/rendering/: camera.hpp  camera_config.hpp  renderer.hpp  shader.hpp  skybox.hpp
include/scenes/: binary_star_scene.hpp  figure_eight_scene.hpp  scene.hpp  simulation_scene.hpp
include/utils/: obj_loader.hpp
shaders/: fragShader.frag  orbital_trail.frag  orbital_trail.vert  skybox.frag  skybox.vert  vertShader.vert
src/: camera.cpp  cube.cpp  engine.cpp  gameobject.cpp  glad.c  main.cpp  mesh.cpp  mesh_manager.cpp  obj_loader.cpp  planet.cpp  renderer.cpp  scene.cpp  scene_manager.cpp  shader.cpp  simulation_scene.cpp  texture.cpp  texture_manager.cpp  window.cpp
src/core/: engine.cpp  window.cpp
src/managers/: mesh_manager.cpp  scene_manager.cpp  texture_manager.cpp
src/objects/: gameobject.cpp  planet.cpp
src/physics/: physics.cpp
src/renderer/: camera.cpp  mesh.cpp  renderer.cpp  shader.cpp  skybox.cpp  texture.cpp
src/rendering/: camera.cpp  mesh.cpp  renderer.cpp  shader.cpp  skybox.cpp  texture.cpp
src/scenes/: binary_star_scene.cpp  figure_eight_scene.cpp  scene.cpp  simulation_scene.cpp
src/utils/: obj_loader.cpp
